# FreeEta-gd

./: README.md
.github/workflows/: freeeta-ci.yml
EtaDot/: .gitignore  CU_node_scene.tscn  CU_node_type_scene.tscn  CompTreeLayout.tscn  ConfirmDialog.tscn  ConsoleScene.tscn  EtaScene.tscn  RawDataScene.tscn  RustDemo.tscn  about_freeeta_scene.gd  about_freeeta_scene.gd.uid  about_freeeta_scene.tscn  alert_dialog.gd  alert_dialog.gd.uid  alert_dialog.tscn  bottom_slide.tscn  common_node.gd  common_node.gd.uid  common_node.tscn  comp_tree_layout.gd  comp_tree_layout.gd.uid  component.gd  component.gd.uid  component.tscn  confirm_dialog.gd  confirm_dialog.gd.uid  crab_button.tscn  crab_scene.tscn  create_node_scene.gd  create_node_scene.tscn  cu_node_scene.gd  cu_node_scene.gd.uid  cu_node_type_scene.gd  cu_node_type_scene.gd.uid  desc_box.gd  desc_box.gd.uid  error_dialog.gd  error_dialog.gd.uid  error_dialog.tscn  eta_scene.gd  (+35 more)
EtaDot/assets/: add-more.kra  add-more.png.import  add-more.svg.import  add.svg.import  bluepoint.svg.import  delete.svg.import  dim-star.png.import  ellipsis.svg.import  empty.kra  empty.png.import  greenpoint.svg.import  greypoint.svg.import  log.png.import  logo.svg.import  node.kra  node.png.import  orangepoint.svg.import  pen.kra  pen.png.import  programming.kra  programming.png.import  pump.svg.import  purplepoint.svg.import  redpoint.svg.import  rubbish-bin-red.svg.import  star.png.import  valve.svg.import  yellowpoint.svg.import
EtaDot/fonts/: Inter-Regular.ttf.import
EtaDot/models/: GlobalData.gd  GlobalData.gd.uid  TreeNode.gd  TreeNode.gd.uid  component.gd  component.gd.uid  components.gd  components.gd.uid  json_highlighter.gd.uid  node_type.gd  node_type.gd.uid  node_types.gd  node_types.gd.uid
EtaDot/scripts/: CompUtil.gd  CompUtil.gd.uid  JsonClassConverter.gd  JsonClassConverter.gd.uid  algor.gd  algor.gd.uid  logger.gd  logger.gd.uid  tree.gd  tree.gd.uid
EtaDot/tests/: TestTreeLayout.tscn  test_adjacency_list.gd  test_adjacency_list.gd.uid  test_json.gd  test_json.gd.uid
EtaDot/themes/: BarTheme.tres  ConfirmDialog.tres  Dialog.tres  ErrorDialog.tres  (+5 more)
rust/: .gitignore  Cargo.toml
rust-template/: crab_scene.gd.uid  crab_scene.tscn  logo.gd  logo.gd.uid  logo.tscn  main.tscn  project.godot  rust_crab.gd  top_bar.gd  top_bar.gd.uid  top_bar.tscn  top_slide.tscn
rust/etactl/: Cargo.toml  README.md
rust/etactl/src/: main.rs  model.rs
rust/etalib/: Cargo.toml
rust/etalib/src/: calc.rs  common.rs  lib.rs  model.rs
rust/src/: common.rs  lib.rs  quad.rs
(+74 files in other folders)
