[package]
name = "etactl"
# description = ""
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
# homepage.workspace = true
categories.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
crossterm = "0.29.0"
etalib = { path = "../etalib" }

[badges]
maintenance = { status = "actively-developed" }
